# Ben-s-Software-

./: .gitignore  build-installer.bat  comm-v10.py  comm-v9.py  pyproject.toml  readme.md  run.bat  run.py  streaming_library.py
.github/workflows/: build-installer.yml
docs/: TTS_CLOUD_CONFIGURATION.md
games/: Concentration.py  Trivia.py  baseball.py  bensgolf.py  concentration.py  golf-level-editor.py  tictactoe.py  towerdefense.py  trivia.py  wordjumble.py
keyboard/: keyboard.py  keyboard_predictive.py  predictive_config.json
scripts/: pre-commit.bat  pre-commit.sh
shared/: __init__.py  tts_config.json  tts_config_example_with_azure.json  utils.py
