[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bens-accessibility-software"
version = "1.0.0"
description = "Accessibility software for individuals with physical challenges, featuring scan-and-select capabilities, predictive text, and entertainment functions."
readme = "readme.md"
license = {file = "license"}
authors = [
    {name = "NARBE House", email = "contact@narbehouse.org"}
]
maintainers = [
    {name = "NARBE House", email = "contact@narbehouse.org"}
]
keywords = [
    "accessibility",
    "assistive-technology",
    "predictive-text",
    "keyboard",
    "communication",
    "entertainment"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Adaptive Technologies",
    "Topic :: Communications",
    "Topic :: Games/Entertainment",
]
requires-python = ">=3.10"
dependencies = [
    "py3-tts-wrapper[sapi,espeak,googletrans]>=0.10.20",
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "pywin32>=306; sys_platform == 'win32'",
    "pandas>=2.2.0",
    "pygame>=2.1.0",
    "pymunk>=6.4.0",
    "openpyxl>=3.1.5",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.99",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/NARBEHOUSE/Ben-s-Software-"
Repository = "https://github.com/NARBEHOUSE/Ben-s-Software-.git"
Issues = "https://github.com/NARBEHOUSE/Ben-s-Software-/issues"

[project.scripts]
bens-software = "comm-v10:main"
bens-keyboard = "keyboard.keyboard:main"

[tool.hatch.build.targets.wheel]
packages = ["keyboard", "games", "data", "images", "soundfx"]

[tool.hatch.build.targets.sdist]
include = [
    "/keyboard",
    "/games", 
    "/data",
    "/images",
    "/soundfx",
    "/comm-v10.py",
    "/readme.md",
    "/license",
    "/pyproject.toml",
    "/disable_space_chrome.ahk"
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/.pytest_cache",
    "**/.mypy_cache",
    "**/test_*.py",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py38"
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR2004", # magic value used in comparison
    "PLW2901", # redefined loop variable
    "ARG002",  # unused method argument
    "ARG001",  # unused function argument
    "SIM108",  # use ternary operator
    "ERA001",  # commented out code
    "PLW0603", # global statement
    "PLC0415", # import outside top-level (legacy code)
    "E402",    # module level import not at top (legacy code)
    "F811",    # redefined unused (legacy code)
    "PLW1510", # subprocess without check (legacy code)
    "RUF001",  # ambiguous unicode (legacy comments)
    "RUF002",  # ambiguous unicode (legacy comments)
    "RUF003",  # ambiguous unicode (legacy comments)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"test_*.py" = ["PLR2004", "S101", "ARG"]  # allow magic values and asserts in tests
"**/tests/**" = ["PLR2004", "S101", "ARG"]

[tool.ruff.lint.isort]
known-first-party = ["keyboard", "games"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=keyboard",
    "--cov=games",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["keyboard", "games"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
